<resources>
    <string name="app_name">Orderix</string>
    <string name="money_prefix">$</string>
    <string name="order_detail_create_order">Create Order</string>
    <string name="order_detail_edit_order">Edit Order</string>
    <string name="order_detail_client">Client Name</string>
    <string name="order_detail_sale_condition">Sale Condition:</string>
    <string name="order_detail_cash">Cash</string>
    <string name="order_detail_account">Bank Account</string>
    <string name="order_detail_check">Check</string>
    <string name="order_detail_others">Other</string>
    <string name="order_detail_comments">Comments</string>
    <string name="order_detail_total">Total</string>
    <string name="menu_save">Save</string>
    <string name="menu_search">Search</string>
    <string name="list_item_order_total_text">$ 531.33</string>
    <string name="list_item_order_client_text">Lucas Labari</string>
    <string name="list_item_order_comments_text">Comments</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_item_orders_list">Orders</string>
</resources>
