<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp">

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

        <TextView
                android:id="@+id/text_view_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/list_item_order_total_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
                android:id="@+id/text_view_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/text_view_total"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/list_item_order_client_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
                android:id="@+id/text_view_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_client"
                android:text="@string/list_item_order_comments_text"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>